[gd_scene load_steps=10 format=3 uid="uid://c6mufcm6wmgcn"]

[ext_resource type="Script" uid="uid://dfk5c8vm30wp4" path="res://scripts/main_scene/cosmic_cruiser.gd" id="1_hci50"]
[ext_resource type="PackedScene" uid="uid://5pu1uu8js4bi" path="res://import/cosmic_cruiser.glb" id="1_ooyga"]
[ext_resource type="PackedScene" uid="uid://dcd0l1ye5i2lk" path="res://scenes/missile1.tscn" id="2_j7o7i"]
[ext_resource type="LightmapGIData" uid="uid://xbqtxrgs0qii" path="res://resources/cosmic_cruiser.lmbake" id="3_0vtqp"]
[ext_resource type="PackedScene" uid="uid://c3r0h0p4w371a" path="res://import/cosmic_cruiser_destroyed.glb" id="5_edoeq"]
[ext_resource type="Script" uid="uid://cra0md6tqliiq" path="res://scripts/locker/l_s_state_machine_player.gd" id="6_peeb5"]
[ext_resource type="PackedScene" uid="uid://lskm5tbedisk" path="res://scenes/lego_destroyer.tscn" id="7_565lu"]
[ext_resource type="Resource" uid="uid://kh4vg10jpgc0" path="res://resources/state_machines/smp_cosmic_cruiser.tres" id="7_hci50"]

[sub_resource type="BoxShape3D" id="BoxShape3D_qdaub"]
size = Vector3(2.06741, 0.783447, 1.97916)

[node name="CosmicCruiser" type="CharacterBody3D" groups=["enemy_planes"]]
collision_layer = 2
collision_mask = 171
script = ExtResource("1_hci50")
shell1_scene = ExtResource("2_j7o7i")

[node name="LightmapGI" type="LightmapGI" parent="."]
unique_name_in_owner = true
light_data = ExtResource("3_0vtqp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.108353, 0.0296631, 0.00584405)
shape = SubResource("BoxShape3D_qdaub")

[node name="cosmic_cruiser" parent="." instance=ExtResource("1_ooyga")]

[node name="CenterOfExplosion" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.121472, 0)

[node name="LegoDestroyer" parent="." instance=ExtResource("7_565lu")]
unique_name_in_owner = true
destroy_model = ExtResource("5_edoeq")
initial_model_np = NodePath("../cosmic_cruiser")
explode_intensity = 8.0
center_of_explosion_np = NodePath("../CenterOfExplosion")

[node name="FiniteStateMachineIA" type="Node" parent="." groups=["enemies"]]
unique_name_in_owner = true
script = ExtResource("6_peeb5")
state_machine = ExtResource("7_hci50")
autostart = false
metadata/_custom_type_script = "uid://46l00vp06dcr"

[node name="MissileOrigs" type="Node3D" parent="."]

[node name="MissileLOrig" type="Marker3D" parent="MissileOrigs"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.45639, 0, 0.859941)

[node name="MissileROrig" type="Marker3D" parent="MissileOrigs"]
unique_name_in_owner = true
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.45639, 0, -0.83126)

[connection signal="destroy" from="." to="." method="_on_destroy"]
[connection signal="destroy_begin" from="LegoDestroyer" to="." method="_on_lego_destroyer_destroy_begin"]
[connection signal="destroy_end" from="LegoDestroyer" to="." method="_on_lego_destroyer_destroy_end"]
[connection signal="transited" from="FiniteStateMachineIA" to="." method="_on_smp_ia_transited"]
